--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,87 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kumar.penguingame">
 
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="21" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_web"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".StartActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".OptionsActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".AdelieActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".AfricanActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".BlueActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".EmperorActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ErectcrestedActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".GalapogosActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".GentooActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".HumboltActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".KingActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".MacoroniActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".RockhopperActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".RoyalActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".YelloweyedActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ScorecardActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".CreditsActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
